--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "boftp",
-  "displayName": "boftp",
-  "description": "Transfert ftp d element",
+  "displayName": "boFTP",
+  "description": "Transfert ftp d'élément",
   "version": "0.0.1",
+	"publisher": "ITCE-MathieuFay",
   "engines": {
     "vscode": "^1.54.0"
   },
@@ -10,16 +11,22 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:boftp.helloWorld"
+    "onCommand:boftp.transfertFTP"
   ],
   "main": "./extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "boftp.helloWorld",
-        "title": "Hello World"
+        "command": "boftp.transfertFTP",
+        "title": "boFTP-Transfert de fichier"
       }
-    ]
+    ],
+		"menus": {
+			"editor/context": [ {
+				"command": "boftp.transfertFTP",
+				"group": "0_FTP@1"
+			} ]
+		}
   },
   "scripts": {
     "lint": "eslint .",
@@ -36,5 +43,8 @@
     "mocha": "^8.2.1",
     "typescript": "^4.1.3",
     "vscode-test": "^1.5.0"
+  },
+  "dependencies": {
+      "js-yaml": "^3.13.1"
   }
 }
