--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "version": "0.1.1",
   "publisher": "borakLeRouge",
   "icon": "iconeBn.png",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/BorakLeRouge/boFTP"
+  },  
   "engines": {
     "vscode": "^1.54.0"
   },
