--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "boftp",
   "displayName": "boFTP",
   "description": "Transfert ftp d'élément",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "publisher": "borakLeRouge",
   "icon": "iconeBn.png",
   "repository": {
@@ -17,7 +17,8 @@
   ],
   "activationEvents": [
     "onCommand:boftp.transfertFTP" ,
-    "onCommand:boftp.testFTP"
+    "onCommand:boftp.testFTP",
+    "onCommand:boftp.chgtPassword"
   ],
   "main": "./extension.js",
   "contributes": {
@@ -29,6 +30,10 @@
       {
         "command": "boftp.testFTP",
         "title": "boFTP-Validation accès FTP"
+      } ,
+      {
+        "command": "boftp.chgtPassword",
+        "title": "boFTP-Changement password compte actif"
       }
     ],
 		"menus": {
