--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "boftp",
   "displayName": "boFTP",
   "description": "Transfert ftp d'élément",
-  "version": "0.1.5",
+  "version": "0.2.0",
   "publisher": "borakLeRouge",
   "icon": "iconeBn.png",
   "repository": {
@@ -25,15 +25,15 @@
     "commands": [
       {
         "command": "boftp.transfertFTP",
-        "title": "boFTP-Transfert de fichier"
+        "title": "boFTP-Transférer le fichier"
       } ,
       {
         "command": "boftp.testFTP",
-        "title": "boFTP-Validation accès FTP"
+        "title": "boFTP-Valider l'accès FTP"
       } ,
       {
         "command": "boftp.chgtPassword",
-        "title": "boFTP-Changement password compte actif"
+        "title": "boFTP-Changer le mot de passe"
       }
     ],
 		"menus": {
